# neurotechdevkit

./: .flake8  .gitignore  .mlc_config.json  Dockerfile  Dockerfile-gpu  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  package.json  pyproject.toml  requirements.txt  run_jupyter_server.sh  whitelist.txt
.circleci/: config.yml
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: check_labels.yml  check_links.yml  circle_artifacts.yml  docs.yml  docs_test.yml  labeler.yml  lint.yml  mlc_config.json  release.yml  test.yml  test_no_release.yml  trigger_gallery_build.yml  web.yml
docs/: contributing.md  contributing_ae.md  conventions.md  index.md  installation.md  notebook-philosophy.md  user_interface.md
docs/api/: grid.md  make.md  materials.md  problem.md  results.md  scenarios.md  sources.md  utils.md
docs/css/: mkdocstrings.css
docs/examples/: _plot_adding_custom_source.py  plot_3d.py  plot_adding_custom_source.py  plot_combined_sources.py  plot_create_scenario_0_procedurally.py  plot_create_scenario_2_procedurally.py  plot_customized_center_frequency.py  plot_full_scenario.py  plot_homer.py  plot_load_ct.py  plot_metrics.py  plot_multiple_sources.py  plot_phased_array_source.py  plot_playground.py  plot_pulsed_simulation.py  plot_scenario2_predefined_target.py  plot_scenario_predefined_target.py  plot_scenarios.py  plot_store_results.py  plot_time_reverse.py  plot_ultrasound_imaging_multiplane.py  plot_ultrasound_imaging_scanline.py
docs/usage/: 3d.md  defining_sources.md  gpu.md  installation.md  loading_scenarios.md  local_installation.md  running_simulation.md  troubleshooting.md
notebooks/: imaging.ipynb  ultrasound-imaging-multiplane.ipynb  ultrasound-imaging-scanline.ipynb
src/neurotechdevkit/: __init__.py  api.py  grid.py  imaging.py  materials.py  problem.py  sources.py
src/neurotechdevkit/imaging/: __init__.py  beamform.py  demodulate.py  util.py
src/neurotechdevkit/rendering/: __init__.py  _animations.py  _formatting.py  _source.py  _target.py  colormaps.py  font.py  layers.py  layout.py  legends.py  napari.py  simulations.py
src/neurotechdevkit/results/: __init__.py  _metrics.py  _results.py
src/neurotechdevkit/scenarios/: __init__.py  _base.py  _metrics.py  _resources.py  _results.py  _scenario_0.py  _scenario_1.py  _scenario_2.py  _scenario_3.py  _shots.py  _time.py  _utils.py  ct_loader.py  materials.py
src/neurotechdevkit/scenarios/built_in/: __init__.py  _scenario_0.py  _scenario_1.py  _scenario_2.py  _scenario_3.py  _scenario_flat_skull.py  _scenario_realistic_skull.py  _scenario_simple.py  _scenario_ultrasound_phantom.py
src/neurotechdevkit/scenarios/data/: skull_mask_bm8_dx_0.5mm.mat
src/scripts/: __init__.py  download_notebooks.py
src/web/: __init__.py  app.py  computed_tomography.py  controller.py  ct.py  simulation_runner.py  views.py
src/web/app/: package-lock.json  package.json
src/web/app/public/: index.html
src/web/app/src/: App.vue  event-bus.js  main.js  store.js
src/web/messages/: __init__.py  material_properties.py  settings.py  transducers.py
src/web/static/css/: style.css
src/web/static/js/: script.js
src/web/templates/: base.html  index.html
src/web/templates/components/: parameters.html  scenario_layout.html
tests/neurotechdevkit/: test_compilation.py  test_scenario_with_all_parameters.py  test_sources.py
tests/neurotechdevkit/imaging/: test_beamform.py  test_demodulate.py
tests/neurotechdevkit/scenarios/: test_base.py  test_builtin.py  test_ct_loader.py  test_grid.py  test_materials.py  test_metrics.py  test_problem.py  test_resources.py  test_results.py  test_shots.py  test_time.py  test_utils.py
tests/neurotechdevkit/scenarios/test_data/: PH1-BM4-SC1_STRIDE.mat  broken_tarball.tz  (+1 more)
tests/neurotechdevkit/test_imaging/: test_beamform.py  test_demodulate.py
tests/web/: conftest.py  test_controller.py  test_messages.py  test_views.py
web/: app.py  built_in_scenario_info.py  controller.py  messages.py  views.py  web_server.py
web/messages/: material_properties.py  requests.py  settings.py  transducers.py
web/static/: script.js
web/static/css/: style.css
web/templates/: base.html  index.html
web/templates/backup/: index.html  index2.html  result.html  results.html
web/templates/components/: parameters.html  scenario_layout.html
(+53 files in other folders)
