[tool.poetry]
name = "neurotechdevkit"
version = "v0.6.3"
description = "Neurotech Development Kit: an open-source software library designed to enhance accessibility to cutting-edge neurotechnology"
authors = ["AE Studio <bci@ae.studio>"]
maintainers = ["AE Studio <bci@ae.studio>"]
packages = [{include = "neurotechdevkit", from = "src" }]

readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/agencyenterprise/neurotechdevkit"
"Documentation" = "https://agencyenterprise.github.io/neurotechdevkit/"
"Bug Tracker" = "https://github.com/agencyenterprise/neurotechdevkit/issues"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.3"
matplotlib = "^3.5.3"
imageio = "^2.21.2"
ipywidgets = "*"
jupyter = "*"
jupyterlab = "^3.4.6"
devito = "4.7.1"
scipy = "^1.9.1"
hdf5storage = "^0.1.18"
psutil = "^5.9.0"
nest-asyncio = "^1.5.6"
mkdocs-gallery = "0.7.6"
xarray = ">=2022.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.990"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.2"
mkdocs-material = "^9.1.6"
mkdocs-gallery = "^0.7.6"
mkdocs-offline-links-plugin = { git = "https://github.com/agencyenterprise/mkdocs-offline-links-plugin.git" }
mkdocstrings = {extras = ["python"], version = "^0.21.2"}
codespell = "^2.2.4"
pydocstyle = "^6.3.0"
pyright = "^1.1.306"
pooch = "^1.7.0"
pylint = {extras = ["spelling"], version = "^2.17.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = "True"
exclude = [
    "tests"
]

[tool.isort]
profile = "black"
src_paths = "."

known_first_party = "neurotechdevkit"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
    "--cov=src/neurotechdevkit"
]
markers = [
    "integration: marks tests that are integration tests."
]

[tool.pyright]
include = ["src"]
reportGeneralTypeIssues = "none"
# [tool.flake8]
# flake8 does not support config in pyproject.toml, see .flake8
